@@ -108,6 +108,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #15275: Clean up and speed up the ntpath module.
+
 - Issue #21888: plistlib's load() and loads() now work if the fmt parameter is
   specified.
 
